* Rework the algorithm for more performance.   * Add get_bucket method for the cases when we look for only one     bucket per key.

--- a/README
+++ b/README
@@ -5,6 +5,12 @@ Constant hash distribution means that if we add a bucket to a hash with N
 buckets filled with M keys we have to reassign only M/(N+1) keys to new 
 buckets.
 
+What puts apart this module from all similar modules available is that you
+could ask for non-repeatable series of buckets. Using this property you 
+could implement not only consistent distribution but also redundancy - one
+key to be directed to more than one bucket.
+
+
 INSTALLATION
 
 To install this module, run the following commands:
